# Gattrose-NG

./: .gitignore  README.md  SAFETY_RULES.md  pyproject.toml
archive/: TODO.md  WEB_SERVER_IMPLEMENTATION.md  gattrose-direct.sh  launch-gattrose.sh  start-gattrose.sh
assets/: gattrose-ng.desktop  gattrose-ng.xcf  gattrose-tray.desktop
bw16_firmware/: FLIPPER_APP_INTEGRATION.md  PROTOCOL.md  README.md  gattrose_cli.py  original_firmware_capture.txt  test_deauth.py
config/: __init__.py  com.gattrose.pkexec.policy  gattrose-ng.service  security_settings.py
docs/: API_QUICK_REFERENCE.md  API_TESTING_GUIDE.md  API_TEST_REPORT_20251101_214942.txt  API_V3_IMPLEMENTATION_SUMMARY.md  API_v3_Documentation.md  AUTO_SCAN_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_NOV_1_2024.md  CHANGELOG_v2.1.3.md  CHANGELOG_v2.2.3.md  CHANGES_NOV_1.md  COMPLETE_IMPLEMENTATION_NOV_1.md  CURRENT_STATUS.md  DOUBLE_CLICK_FIX.md  FILE_MANIFEST.yaml  FILE_MANIFEST_REPORT.md  FIXES.md  FLIPPER_ZERO_INTEGRATION.md  HEADLESS_MODE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INCOMPLETE_FEATURES.md  INSTALLATION.md  LAUNCHER_FIX.md  LOCAL_API.md  NEW_FEATURES.md  PROCESS_MANAGEMENT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  READY_TO_SCAN.md  RECENT_UPDATES.md  RENAMING_UPDATES.md  SERIALIZATION.md  STATUS_BAR_FIX.md  TEST_PLAN.md  THEMES.md  TODO.md  UPDATE.md  VERSION_MANAGEMENT.md  WIFI_SCANNER_IMPLEMENTATION.md  (+1 more)
examples/: api_automation.py
flipper_bw16_deauther/: README.md  application.fam  build_gattrose.sh  gattrose_ng.c
install/: install.sh
migrations/: README.md  (+5 more)
src/: main.py  (+6 more)
(+122 files in other folders)
